--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "chromadb>=1.0.15",
     "google-generativeai>=0.8.5",
     "mcp>=1.12.1",
     "mcp-cli>=0.5.2",
